client/views/find/_find.scss
.find-heading {
  color: $brand-primary;
  margin-top: 0;
  @media (max-width: $screen-xs) {
    font-size: x-large;
    margin: 0 0 10px;
  }
}

.search {
	@include grid(12);
	padding: 0;
}

.js-search-field {
  @include grid(12, inherit, 5);
  padding: 0 0 15px;
}

.js-search-input {
  font-size: large;
}

.filter {
  @include grid(12, inherit, 7);
  padding: 0;
  @media (max-width: $screen-xs) {
		@include grid(12);
		background: $gray-lighter;
    border: 1px solid $btn-default-border;
		border-radius: 4px;
    margin-top: 5px;
    padding: 0 10px;
  }
  @media (min-width: $screen-md) {
    padding-left: 15px;
  }
}

.filter-header {
	border-bottom: 1px solid $openki-blue-lighter;
  color: $brand-primary;
	width: 100%;
  @media (max-width: $screen-xs) {
		border: 0;
    display: none;
  }
}

.filter-heading {
  margin-top: 8px;
}

.filter-course-properties,
.filter-categories {
  float: left;
}

.filter-course-properties {
  padding: 10px 15px 10px 0;
  @media (max-width: $screen-xs) {
    padding-right: 0;
    width: 100%;
  }
  .btn-group-vertical {
    @media (max-width: $screen-xs) {
      width: 100%;
    }
  }
}

.js-toggle-property-filter {
  text-align: left;
}

.toggle-property-filter-icon {
  background: $role-needed-bg;
  color: $role-needed-text;
  display: inline-block;
  text-align: center;
  width: 28px;
  & > .glyphicon {
    position: relative;
    top: 2px;
  }
}

.eventcaption_upcoming {
  background: $openki-blue-lighter;
  display: inline-block;
  height: 20px;
  position: relative;
  vertical-align: bottom;
  width: 28px;
}

.eventcaption_upcoming_box {
  background: $brand-success;
  height: 10px;
  position: absolute;
  right: 0;
  top: 0;
  width: 10px;
}

.eventcaption_upcoming_text {
  background: $default-shadow;
  height: 1px;
  left: 3px;
  position: absolute;
  width: 3px;
  &.first-line {
    top: 2px;
  }
  &.second-line {
    top: 4px;
  }
  &.third-line {
    top: 6px;
  }
}

.eventcaption_upcoming,
.toggle-property-filter-icon {
  @include opacity(.7);
  @include transition(opacity .15s);
}

.js-toggle-property-filter:hover > .eventcaption_upcoming,
.js-toggle-property-filter:hover > .toggle-property-filter-icon,
.active > .eventcaption_upcoming,
.active > .toggle-property-filter-icon {
  @include opacity(1);
}

.filter-categories {
  padding: 10px 0;
  @media (max-width: $screen-xs) {
    padding: 0;
    width: 100%;
  }
  h4 {
    color: $brand-primary;
    margin-top: 0;
  }
}

.filter-categories-heading {
  @media (max-width: $screen-xs) {
    display: none;
  }
}

.filter-categories-select {
  margin-bottom: 10px;
	padding: 0;
  .dropdown-toggle {
    display: none;
  }
  &::after {
    content: '';
    font-family: FontAwesome;
    position: absolute;
    right: 7px;
    top: 6px;
  }
  &.open::after {
    content: '';
  }
}

.js-search-categories {
  border: 1px dashed $category-bg;
  &:focus {
    border-style: solid;
  }
}

.filter-no-categories-found {
  padding: 5px 10px;
  &:hover {
    background-color: $body-bg;
    cursor: default;
  }
}

.filter-categories-dropdown {
  max-height: 300px;
  min-width: 100%;
  overflow-x: hidden;
  overflow-y: auto;
  .js-category-label {
    background-color: $dropdown-bg;
    box-shadow: none;
    position: relative;
  }
}

.js-toggle-subcategories {
  padding: 0 5px;
  &:hover {
    cursor: pointer;
  }
}

.dropdown-menu > .js-sub-category {
  border-left: 1px solid $dropdown-link-hover-bg;
  display: none;
  margin-left: 20px;
	& > a {
		padding-left: 15px;
	}
}

.filter-selected-categories {
  list-style: none;
  margin: 0;
  padding: 0;
	@media (max-width: $screen-xs) {
		border: 1px solid $brand-success;
		border-radius: 4px;
		margin-bottom: 10px;
		padding: 5px;
	}
  li {
    margin-bottom: 3px;
    padding: 0 3px 3px 0;
    @media (max-width: $screen-xs) {
      display: inline-block;
			margin: 5px 0;
			padding-bottom: 0;
    }
  }
}

.no-courses-found {
  background: lighten($gray-lighter, 5%);
  border: 1px solid darken($gray-lighter, 10%);
  font-size: large;
  margin: 20px auto;
  max-width: 400px;
  padding: 15px;
  text-align: center;
  .fa-exclamation-circle {
    color: $brand-warning;
    padding-right: 5px;
  }
  .btn-group {
    margin-top: 10px;
  }
}

